--- a/css/yd22.v1.css
+++ b/css/yd22.v1.css
@@ -793,7 +793,9 @@ span.two {
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
 }
-
+.accordian img {
+  opacity: 0.2;
+}
 /**
  * Submenu
  -----------------------------*/
@@ -835,10 +837,10 @@ span.two {
 /* INTACC */
 
 .accordian_container {
-  padding-top: 20vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--dark_purple);
 }
 .interesting-accordian1 {
   max-width: 80vw;
@@ -857,8 +859,8 @@ span.two {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 20vh;
-  width: 10vw;
+  height: 10vh;
+  width: 6vw;
   padding: auto;
   cursor: pointer;
   overflow: hidden;
@@ -873,7 +875,7 @@ span.two {
 
   text-align: center;
   transition: all 0.5s ease;
-  font-size: 1.5vw;
+  font-size: 16px;
 }
 
 .interesting-accordian1 .accordian-details {
